<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
   >

    <data>
        <variable
            name="myViewModel"
            type="com.assignment.fluper.viewmodel.ProductViewModel" />
    </data>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    >

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_product_name"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:text="@={myViewModel.productName}"
        android:maxLength="30"
        android:maxLines="1" />

    <EditText
        android:id="@+id/edt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="start"
        android:hint="@string/txt_description"
        android:inputType="textCapSentences"
        android:text="@={myViewModel.productDescription}"
        android:maxLength="200"
        android:maxLines="3"
        android:minHeight="@dimen/_60sdp" />

    <EditText
        android:id="@+id/edt_regular_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="start"
        android:hint="@string/txt_regular_price"
        android:imeOptions="actionNext"
        android:text="@={myViewModel.productRegularPrice}"
        android:inputType="number"
        android:maxLength="4"
        android:maxLines="1" />

    <EditText
        android:id="@+id/edt_sale_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="start"
        android:hint="@string/txt_sale_price"
        android:text="@={myViewModel.productSalePrice}"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="4"
        android:maxLines="1" />

    <EditText
        android:id="@+id/edt_product_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="start"
        android:hint="@string/txt_product_image_url"
        android:imeOptions="actionDone"
        android:text="@={myViewModel.productPhoto}"
        android:inputType="text"
        android:maxLength="500"
        android:maxLines="1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_colors"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp" />

    <Button
        android:id="@+id/btn_add_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/gradient_background"
        android:text="@={myViewModel.productBtnUpdate}"
        android:onClick="@{()->myViewModel.addProduct()}"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_10sdp" />
</LinearLayout>
</androidx.core.widget.NestedScrollView>
</layout>